# yt-tracklist-splitter

./: .gitignore  README.md  index.html  package-lock.json  package.json  split.py  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: fetch-binaries.mjs
src/: api.ts  crop.ts  main.ts  styles.css  yt.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  commands.rs  lib.rs  main.rs  media.rs  sh.rs  tracklist.rs  types.rs  ytdlp.rs
